# CryptoMAI

./: .clang-tidy  .clangd  1.txt  2.txt  3.txt  CMakeLists.txt  CMakePresets.json  Crypto.cpp  Crypto.h  README.md  perf.sh  vc140.idb  video.webm
include/: debug.h  math.h  utils_math.h
src/: cypher.cppm  cypher.ixx  perestanovki.cpp
src/cypher/: cypher.cppm  permutate.cppm  premutate.cppm
src/cypher/RSA/: BadRSA.cppm  RSA.cppm
src/cypher/RSA/attack/: WiennerAttack.cppm
src/cypher/SymmetricAlgorithms/: FeistelNet.cppm  cypher.cppm  permutate.cppm  utils.cppm
src/cypher/SymmetricAlgorithms/DEAL/: DEAL.cppm
src/cypher/SymmetricAlgorithms/DES/: DES.cppm  des_tables.cppm
src/cypher/SymmetricAlgorithms/Rijndael/: Rijndael.cppm
src/math/: GaloisFieldPoly.cppm  math.cppm
src/math/primary/: PrimaryTests.cppm
tests/: CMakeLists.txt  test_DEAL.cpp  test_DES.cpp  test_DES_clear.cpp  test_GaloisField.cpp  test_Rijndael.cpp  test_WiennerAttack.cpp  test_cypher.cpp  test_feistel.cpp  test_fermat.cpp  test_gcd.cpp  test_miller_rabin.cpp  test_permutate.cpp  test_rsa.cpp  test_solovey_strassen.cpp  test_symbols.cpp
tests/experiments/: experiments.cpp
